--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@getbrevo/brevo": "^1.0.1",
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
@@ -18,7 +19,6 @@
 		"express": "^4.18.2",
 		"express-mongo-sanitize": "^2.2.0",
 		"firebase": "^10.5.2",
-		"firebase-admin": "^11.11.0",
 		"helmet": "^7.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.6.3",
