--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
 		"hpp": "^0.2.3",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.6.3",
+		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.9.6",
 		"sharp": "^0.32.6",
