--- a/server/package.json
+++ b/server/package.json
@@ -4,48 +4,53 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node server.js",
-		"build": "cd FrontEnd && npm run build",
-		"start:dev": "nodemon server.js",
-		"start:prod": "NODE_ENV=production nodemon server.js"
+		"start:dev": "nodemon dist/server.js",
+		"start:prod": "NODE_ENV=production nodemon dist/server.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@getbrevo/brevo": "^1.0.1",
 		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.20.2",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
-		"dotenv": "^16.3.1",
+		"crypto": "^1.0.1",
+		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"express-mongo-sanitize": "^2.2.0",
-		"express-rate-limit": "^7.1.4",
-		"firebase": "^10.5.2",
-		"helmet": "^7.0.0",
+		"express-rate-limit": "^7.1.5",
+		"firebase": "^10.8.0",
+		"helmet": "^7.1.0",
 		"hpp": "^0.2.3",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^7.6.3",
+		"mongoose": "^8.1.1",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
-		"nodemailer": "^6.9.6",
-		"sharp": "^0.32.6",
+		"nodemailer": "^6.9.9",
+		"sharp": "^0.33.2",
 		"slugify": "^1.6.6",
-		"stripe": "^14.3.0",
+		"stripe": "^14.16.0",
+		"util": "^0.12.5",
 		"xss-clean": "^0.1.4"
 	},
 	"devDependencies": {
-		"eslint": "^8.52.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^5.0.1",
-		"eslint-plugin-react": "^7.33.2",
-		"prettier": "^3.0.3"
-	},
-	"engines": {
-		"node": ">=10.0.0"
+		"@types/bcryptjs": "^2.4.6",
+		"@types/compression": "^1.7.5",
+		"@types/cookie-parser": "^1.4.6",
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/hpp": "^0.2.6",
+		"@types/jsonwebtoken": "^9.0.5",
+		"@types/mongoose": "^5.11.97",
+		"@types/morgan": "^1.9.9",
+		"@types/multer": "^1.4.11",
+		"@types/node": "^20.11.17",
+		"@types/nodemailer": "^6.4.14",
+		"@types/sharp": "^0.32.0",
+		"@types/xss-filters": "^0.0.30",
+		"typescript": "^5.3.3"
 	}
 }
